10-ingress/03-path-based-routing/01-product.yaml

# 3 deployments, then ingress route the tracffic to each deployment by the path

# product deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-app
spec:
  selector:
    matchLabels:
      app: product-app
  replicas: 2
  template:
    metadata:
      labels:
        app: product-app
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: product
        image: vinsdocker/k8s-ingress-product
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-app
  ports:
  - port: 80
    targetPort: 80
